--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,6 +16,7 @@ on:
 env:
   # Use docker.io for Docker Hub if empty
   # github.repository as <account>/<repo>
+  REGISTRY: docker.io
   IMAGE_NAME: santiagogumgum/docker-getting-started
 
 
